add: swagger & dto
